--- a/index.html
+++ b/index.html
@@ -39,20 +39,25 @@
         </div>
 
         <section class="mb-8">
-            <h3 class="text-lg font-bold mb-4">Fitur Magic AI ✨</h3>
-            <button onclick="alert('Membuka Kamera AI...')" class="w-full bg-green-400 p-6 rounded-2xl genz-card flex items-center justify-between group">
-                <div class="flex items-center gap-4">
-                    <div class="bg-white p-3 rounded-xl border-2 border-black">
-                        <i data-lucide="camera" class="w-8 h-8 text-black"></i>
-                    </div>
-                    <div class="text-left">
-                        <p class="font-extrabold text-xl">SCAN NOTA</p>
-                        <p class="text-sm font-semibold text-black/70">Otomatis deteksi barang & harga</p>
-                    </div>
-                </div>
-                <i data-lucide="chevron-right" class="w-6 h-6"></i>
-            </button>
-        </section>
+    <h3 class="text-lg font-bold mb-4 flex items-center gap-2">
+        Fitur Magic AI <span class="animate-pulse text-xl">✨</span>
+    </h3>
+    <button onclick="window.location.href='scan.html'" class="w-full bg-green-400 p-6 rounded-[2rem] genz-card flex items-center justify-between group active:scale-95 transition-all">
+        <div class="flex items-center gap-4">
+            <div class="bg-white p-3 rounded-2xl border-2 border-black shadow-[3px_3px_0px_#000]">
+                <i data-lucide="camera" class="w-8 h-8 text-black"></i>
+            </div>
+            <div class="text-left">
+                <p class="font-extrabold text-xl tracking-tight uppercase italic">SCAN NOTA</p>
+                <p class="text-[11px] font-bold text-black/70 leading-tight">Otomatis deteksi barang & harga</p>
+            </div>
+        </div>
+        <div class="bg-black/10 p-2 rounded-full">
+            <i data-lucide="chevron-right" class="w-6 h-6"></i>
+        </div>
+    </button>
+</section>
+
 
         <section class="mb-6">
             <div class="flex justify-between items-center mb-4">
