--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Keuangku - Smart Finance</title>
+    <title>Keuangku - Dashboard Smart</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;600;700;800&display=swap" rel="stylesheet">
@@ -13,130 +13,152 @@
         .genz-card:active { transform: translate(3px, 3px); box-shadow: 2px 2px 0px #000; }
         .gradient-bg { background: linear-gradient(135deg, #6366f1 0%, #a855f7 100%); }
         .bottom-nav { border-top: 3px solid #000; }
+        .riwayat-container { max-height: 400px; overflow-y: auto; }
     </style>
 </head>
-<body class="pb-24">
+<body class="pb-32">
 
-    <header class="p-6 flex justify-between items-center bg-white">
+    <header class="p-6 flex justify-between items-center bg-white border-b-2 border-gray-100">
         <div>
             <h1 class="text-2xl font-extrabold tracking-tight">KEUANG<span class="text-indigo-600">KU.</span></h1>
-            <p class="text-gray-500 text-sm font-semibold">Halo, Bos UMKM! 👋</p>
+            <p class="text-gray-500 text-xs font-bold uppercase tracking-widest">Halo, Bos UMKM! 👋</p>
         </div>
-        <div class="w-12 h-12 bg-yellow-300 rounded-full border-2 border-black flex items-center justify-center overflow-hidden">
+        <div class="w-12 h-12 bg-yellow-300 rounded-2xl border-2 border-black flex items-center justify-center shadow-[3px_3px_0px_#000]">
             <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=Felix" alt="avatar">
         </div>
     </header>
 
-    <main class="px-6">
-        <div class="gradient-bg p-6 rounded-[2rem] text-white border-4 border-black shadow-[8px_8px_0px_rgba(0,0,0,1)] mb-8">
-            <p class="text-sm opacity-90 font-semibold mb-1">Total Saldo Supply</p>
-            <h2 class="text-3xl font-extrabold mb-4">Rp 12.450.000</h2>
+    <main class="px-6 mt-6">
+        <div class="gradient-bg p-8 rounded-[2.5rem] text-white border-4 border-black shadow-[10px_10px_0px_rgba(0,0,0,1)] mb-10 relative overflow-hidden">
+            <div class="absolute -right-10 -top-10 w-40 h-40 bg-white/10 rounded-full blur-3xl"></div>
+            <p class="text-xs opacity-90 font-black uppercase tracking-widest mb-2">Total Pengeluaran Bulan Ini</p>
+            <h2 id="totalSaldo" class="text-4xl font-extrabold mb-4 italic tracking-tighter">Rp 0</h2>
             <div class="flex gap-3">
-                <div class="bg-white/20 backdrop-blur-md p-2 px-4 rounded-full text-xs border border-white/30 italic">
-                    🔥 12 Nota di-scan minggu ini
+                <div class="bg-black/20 backdrop-blur-md p-2 px-4 rounded-xl text-[10px] font-bold border border-white/20 uppercase tracking-tighter">
+                    ✨ AI Synced: <span id="scanCount">0</span> Nota Terdeteksi
                 </div>
             </div>
         </div>
 
-        <section class="mb-8">
-    <h3 class="text-lg font-bold mb-4 flex items-center gap-2">
-        Fitur Magic AI <span class="animate-pulse text-xl">✨</span>
-    </h3>
-    <button onclick="window.location.href='scan.html'" class="w-full bg-green-400 p-6 rounded-[2rem] genz-card flex items-center justify-between group active:scale-95 transition-all">
-        <div class="flex items-center gap-4">
-            <div class="bg-white p-3 rounded-2xl border-2 border-black shadow-[3px_3px_0px_#000]">
-                <i data-lucide="camera" class="w-8 h-8 text-black"></i>
-            </div>
-            <div class="text-left">
-                <p class="font-extrabold text-xl tracking-tight uppercase italic">SCAN NOTA</p>
-                <p class="text-[11px] font-bold text-black/70 leading-tight">Otomatis deteksi barang & harga</p>
-            </div>
-        </div>
-        <div class="bg-black/10 p-2 rounded-full">
-            <i data-lucide="chevron-right" class="w-6 h-6"></i>
-        </div>
-    </button>
-</section>
-
+        <section class="mb-10">
+            <h3 class="text-lg font-black mb-4 flex items-center gap-2 uppercase italic tracking-tighter">
+                Fitur Magic AI <span class="animate-pulse">✨</span>
+            </h3>
+            <button onclick="window.location.href='scan.html'" class="w-full bg-green-400 p-6 rounded-[2rem] genz-card flex items-center justify-between group active:scale-95 transition-all">
+                <div class="flex items-center gap-4">
+                    <div class="bg-white p-3 rounded-2xl border-2 border-black shadow-[4px_4px_0px_#000]">
+                        <i data-lucide="camera" class="w-8 h-8 text-black"></i>
+                    </div>
+                    <div class="text-left">
+                        <p class="font-extrabold text-xl tracking-tight uppercase italic leading-none">SCAN NOTA</p>
+                        <p class="text-[10px] font-bold text-black/60 uppercase mt-1">Otomatis Masuk Laporan</p>
+                    </div>
+                </div>
+                <div class="bg-black text-white p-2 rounded-xl">
+                    <i data-lucide="arrow-right" class="w-5 h-5"></i>
+                </div>
+            </button>
+        </section>
 
         <section class="mb-6">
-            <div class="flex justify-between items-center mb-4">
-                <h3 class="text-lg font-bold text-black">Riwayat Supply</h3>
-                <a href="#" class="text-indigo-600 font-bold text-sm underline">Lihat Semua</a>
+            <div class="flex justify-between items-center mb-6">
+                <h3 class="text-lg font-black text-black uppercase italic tracking-tighter">Riwayat Supply Terbaru</h3>
+                <button onclick="clearHistory()" class="text-red-500 font-black text-[10px] uppercase underline">Hapus Semua</button>
             </div>
 
-            <div class="bg-white p-4 rounded-2xl border-2 border-black mb-4 flex items-center gap-4">
-                <div class="bg-blue-100 p-3 rounded-xl">
-                    <i data-lucide="shopping-bag" class="text-blue-600"></i>
+            <div id="riwayatList" class="space-y-4 riwayat-container">
                 </div>
-                <div class="flex-1">
-                    <p class="font-bold">Grosir Sembako Jaya</p>
-                    <p class="text-xs text-gray-500 font-semibold">28 Jan 2026 • 5 Barang</p>
+            
+            <div id="emptyState" class="hidden text-center py-10">
+                <div class="bg-gray-100 w-16 h-16 rounded-full flex items-center justify-center mx-auto mb-4 border-2 border-dashed border-gray-300 text-gray-400">
+                    <i data-lucide="receipt"></i>
                 </div>
-                <p class="font-extrabold text-red-500">-Rp 450rb</p>
-            </div>
-
-            <div class="bg-white p-4 rounded-2xl border-2 border-black mb-4 flex items-center gap-4">
-                <div class="bg-purple-100 p-3 rounded-xl">
-                    <i data-lucide="package" class="text-purple-600"></i>
-                </div>
-                <div class="flex-1">
-                    <p class="font-bold">Restock Kemasan</p>
-                    <p class="text-xs text-gray-500 font-semibold">27 Jan 2026 • 1 Barang</p>
-                </div>
-                <p class="font-extrabold text-red-500">-Rp 120rb</p>
+                <p class="text-xs font-bold text-gray-400 uppercase">Belum ada nota yang di-scan</p>
             </div>
         </section>
     </main>
 
-    <nav class="fixed bottom-0 left-0 right-0 bg-white p-4 flex justify-around items-center bottom-nav z-50">
-    <a href="index.html" class="flex flex-col items-center group">
-        <i data-lucide="layout-grid" class="w-6 h-6 transition-colors duration-200"></i>
-        <span class="text-[10px] font-bold mt-1 uppercase transition-colors duration-200">Home</span>
-    </a>
-
-    <a href="statistik.html" class="flex flex-col items-center group">
-        <i data-lucide="bar-chart-3" class="w-6 h-6 transition-colors duration-200"></i>
-        <span class="text-[10px] font-bold mt-1 uppercase transition-colors duration-200">Statistik</span>
-    </a>
-
-    <div class="relative -top-8">
-        <a href="scan.html" class="bg-black text-white p-5 rounded-full border-4 border-white shadow-[0_4px_20px_rgba(0,0,0,0.3)] flex items-center justify-center active:scale-90 transition-transform">
-            <i data-lucide="camera" class="w-8 h-8"></i>
+    <nav class="fixed bottom-0 left-0 right-0 bg-white p-5 flex justify-around items-center bottom-nav z-50">
+        <a href="index.html" class="flex flex-col items-center text-indigo-600">
+            <i data-lucide="layout-grid" class="w-6 h-6"></i>
+            <span class="text-[9px] font-black mt-1 uppercase">Home</span>
         </a>
-    </div>
-
-    <a href="stok.html" class="flex flex-col items-center group">
-        <i data-lucide="box" class="w-6 h-6 transition-colors duration-200"></i>
-        <span class="text-[10px] font-bold mt-1 uppercase transition-colors duration-200">Stok</span>
-    </a>
-
-    <a href="setting.html" class="flex flex-col items-center group">
-        <i data-lucide="settings" class="w-6 h-6 transition-colors duration-200"></i>
-        <span class="text-[10px] font-bold mt-1 uppercase transition-colors duration-200">Setting</span>
-    </a>
-</nav>
-
-<script>
-    // Script Tambahan untuk Auto-Highlight Menu Aktif
-    document.querySelectorAll('nav a').forEach(link => {
-        // Cek jika href link sama dengan nama file saat ini
-        if (window.location.pathname.includes(link.getAttribute('href'))) {
-            link.classList.add('text-indigo-600');
-            link.classList.remove('text-gray-400');
-        } else {
-            link.classList.add('text-gray-400');
-        }
-    });
-    
-    // Pastikan Lucide tetap jalan
-    lucide.createIcons();
-</script>
-
+        <a href="statistik.html" class="flex flex-col items-center text-gray-400">
+            <i data-lucide="bar-chart-3" class="w-6 h-6"></i>
+            <span class="text-[9px] font-black mt-1 uppercase">Statistik</span>
+        </a>
+        <div class="relative -top-8">
+            <a href="scan.html" class="bg-indigo-600 text-white p-5 rounded-full border-4 border-white shadow-[0_4px_20px_rgba(99,102,241,0.4)] flex items-center justify-center active:scale-90 transition-all">
+                <i data-lucide="camera" class="w-7 h-7"></i>
+            </a>
+        </div>
+        <a href="stok.html" class="flex flex-col items-center text-gray-400">
+            <i data-lucide="box" class="w-6 h-6"></i>
+            <span class="text-[9px] font-black mt-1 uppercase">Stok</span>
+        </a>
+        <a href="setting.html" class="flex flex-col items-center text-gray-400">
+            <i data-lucide="settings" class="w-6 h-6"></i>
+            <span class="text-[9px] font-black mt-1 uppercase">Setting</span>
+        </a>
+    </nav>
 
     <script>
-        // Initialize Lucide Icons
         lucide.createIcons();
+
+        // 1. Data Dummy Awal jika Storage Kosong
+        const dummyData = [
+            { id: 1, store: "GROSIR SEMBAKO JAYA", date: "28/01/2026", amount: 450000, type: "CASH" },
+            { id: 2, store: "RESTOCK KEMASAN", date: "27/01/2026", amount: 120000, type: "TRANSFER" }
+        ];
+
+        // 2. Fungsi Load Data dari LocalStorage
+        function renderDashboard() {
+            let data = JSON.parse(localStorage.getItem('keuangku_riwayat')) || dummyData;
+            const container = document.getElementById('riwayatList');
+            const emptyState = document.getElementById('emptyState');
+            const totalSaldoEl = document.getElementById('totalSaldo');
+            const scanCountEl = document.getElementById('scanCount');
+
+            if (data.length === 0) {
+                container.innerHTML = '';
+                emptyState.classList.remove('hidden');
+                totalSaldoEl.innerText = "Rp 0";
+                scanCountEl.innerText = "0";
+                return;
+            }
+
+            emptyState.classList.add('hidden');
+            let total = 0;
+            container.innerHTML = data.map(item => {
+                total += item.amount;
+                return `
+                    <div class="bg-white p-5 rounded-2xl border-2 border-black flex items-center gap-4 shadow-[4px_4px_0px_#000]">
+                        <div class="bg-indigo-100 p-3 rounded-xl border border-indigo-200">
+                            <i data-lucide="${item.type === 'TRANSFER' ? 'credit-card' : 'shopping-bag'}" class="text-indigo-600 w-5 h-5"></i>
+                        </div>
+                        <div class="flex-1">
+                            <p class="font-black text-sm uppercase leading-none">${item.store}</p>
+                            <p class="text-[9px] text-gray-400 font-bold uppercase mt-1">${item.date} • ${item.type}</p>
+                        </div>
+                        <p class="font-black text-red-500 text-sm italic">-Rp ${item.amount.toLocaleString('id-ID')}</p>
+                    </div>
+                `;
+            }).join('');
+
+            totalSaldoEl.innerText = "Rp " + total.toLocaleString('id-ID');
+            scanCountEl.innerText = data.length;
+            lucide.createIcons();
+        }
+
+        function clearHistory() {
+            if(confirm("Hapus semua riwayat?")) {
+                localStorage.setItem('keuangku_riwayat', JSON.stringify([]));
+                renderDashboard();
+            }
+        }
+
+        // Jalankan saat halaman dibuka
+        window.onload = renderDashboard;
     </script>
 </body>
 </html>
